--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint-config-next": "15.1.2",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
